# ToN-Self-Kill

./: Cargo.toml  README.md  build.rs
.github/workflows/: Release.yml
src/: lib.rs  main.rs
