[package]
name = "ToN-Self-Kill"
version = "0.1.0"
edition = "2024"

[dependencies]
winapi = "0.3"
futures-util = "0.3"
enigo = "0.3"
tokio = { version = "1", features = ["full"] }  # tokio
tokio-tungstenite = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
windows-subsystem = "windows"

[profile.dev]
windows-subsystem = "windows"